--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+.containerApp {
+  border: 12px solid black;
+  border-radius: 18px;
+  width: 300px;
+  height: 600px;
+  position: relative;
+  background-color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.containerApp-container {
+  height: calc(100% - 34px);
+  background-color: #e6e9ed26;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* border: 1px solid red; */
+}
+
+.containerApp-options {
+  display: flex;
+  justify-content: space-around;
+  padding: 7px 0;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.containerApp-options img {
+  width: 20px;
+}
+
+.containerApp-shade {
+  width: 300px;
+  height: 80px;
+  border-radius: 50%;
+  background: black;
+  opacity: 0.7;
+  transform: rotate3d(1, 0, 0, 74deg);
+  position: absolute;
+}
+
+.containerNotas {
+  margin-top: 10px;
+  width: 90%;
+  background-color: white;
+  border: 1px solid #dfe1e5;
+  border-radius: 5px;
+  overflow-y: scroll;
+  height: 280px;
+  /* border: 1px solid blue; */
+}
+
+.containerNotas-nota {
+  border-bottom: 1px solid black;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.containerNotas-nota:hover {
+  background-color: #00000012;
+}
+
+.containerNotas-nota__details {
+  width: 75%;
+}
+
+.containerNotas-nota__button {
+  width: 25%;
+}
+
+.containerNotas-botton {
+  padding: 4px 6px;
+  border: 2px solid #55555570;
+  border-radius: 5px;
+  font-weight: 900;
+  transition: all 0.3s;
+}
+
+.containerNotas-botton:hover {
+  background-color: #d90429;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border-color: #d90429;
+  cursor: pointer;
 }
