--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,17 @@
   border-color: #d90429;
   cursor: pointer;
 }
+
+@media screen and (max-width: 415px) {
+  .containerApp {
+    border: none;
+    border-radius: 0;
+    width: 100%;
+    height: 100vh;
+  }
+
+  .containerApp-shade,
+  .containerApp-options {
+    display: none;
+  }
+}
