--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@media screen and (max-width: 415px) {
+  body {
+    display: block;
+  }
+}
